--- a/css/style.css
+++ b/css/style.css
@@ -63,9 +63,9 @@ i {
 
 #conteudo {
   width: 82%;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   margin-left: 18%;
-  position: fixed;
   background-color: #eceff1;
   color: #37474f;
   float: right;
@@ -75,11 +75,13 @@ i {
   border: 1px solid #37474f;
   border-radius: 15px;
   margin: 30px;
-  padding: 20px;
+  padding: 10px 20px;
   background-color: #FFF;
 }
 
 #conteudo > .title > .subtitle {
+  border-top: 1px solid #b1b2b3;
+  padding-top: 5px;
   color: #b0bec5;
 }
 
@@ -128,6 +130,7 @@ i {
 
 #conteudo > .article .active {
   color: #37474f;
+  font-weight: bold;
 }
 
 #conteudo > .article form {
@@ -138,16 +141,95 @@ i {
 #conteudo > .article form select, 
 #conteudo > .article form textarea  {border-color: #f93; color: #37474f;}
 
+#conteudo > .article form input[type=file] { display: none; }
+
 #conteudo > .article form label {
   font-weight: bold;
   color: #37474f;
+}
+
+#conteudo > .article form #fileSelect .badge-primary {  
+  text-decoration: none;
+  font-weight: bold;
+  background-color: #37474f;
+  color: #FFF;
+}
+
+#conteudo > .article form #fileList {
+  border: 1px solid #f93;
+  min-height: 38px;
+  border-radius: 5px;
+  margin-top: 8px;
+}
+
+#conteudo > .article form #fileList p {
+  padding: 5px 15px;
+  margin-bottom: 0;
+}
+
+#conteudo > .article form #fileList ul {
+  margin: 0;
+}
+
+#conteudo > .article form #fileList ul li {
+  list-style: none;
+  padding: 10px;
+}
+
+#conteudo > .article form #fileList ul li span {
+  padding: 10px;
+  font-weight: bold;
 }
 
 #conteudo > .article form .btn {
   margin: 15px;
   background-color: #f93;
   width: 300px;
-  color: #37474f;
+  color: #FFF;
+  font-weight: bold;
+}
+
+#conteudo > .article .title-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#conteudo > .article .title-list .procurar-animais {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+}
+
+
+#conteudo > .article table {
+  border: 1px solid #37474f;
+}
+
+#conteudo > .article table .avatar-list {
+  border-radius: 50%;
+}
+
+#conteudo > .article table i {
+  font-size: 25px;
+}
+
+#conteudo > .article table thead {
+  color: #f93;
+  background-color: #37474f;
+}
+
+
+
+
+/***
+****MEDIAS
+***/
+@media only screen and (max-width: 600px) {
+
+
 }
 
 
