--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,8 @@ i {
 
 .user > h5 {
   margin-top: 10px;
+  padding: 15px;
+  text-align: center;
 }
 
 #menu ul{
@@ -48,11 +50,12 @@ i {
   align-items: center;
   height: 65px;
   border-bottom: 1px solid #2a2a2a;
+  cursor: pointer;
 }
 
-#menu > ul > li > a{
-  border-left:4px solid #222;
-  padding: 5px 0;
+#menu > ul > a {
+  text-decoration: none;
+  color: #FFF;
 }
 
 #menu ul li i{
@@ -65,8 +68,20 @@ i {
   color:#f93;
 }
 
+#menu > .alert {
+  position: absolute;
+  bottom: 0;
+  padding-right: 2.5vw;
+}
+
 #showmenu {
 display: none;
+}
+
+.ativo {
+  background-color:#111;
+  border-left: 4px solid #f93;
+  color:#f93;
 }
 
 
@@ -137,6 +152,47 @@ display: none;
   float: right;
 }
 
+/***
+****TABLE
+***/
+#conteudo .dataTables_filter input[type=search] {
+  border-radius: 5px;
+  padding: 2px;
+  width: 15vw;
+  border: 1px solid #ccc;
+}
+
+#conteudo .dataTables_length select {
+  border-radius: 5px;
+  padding: 2px;
+  border: 1px solid #ccc;
+}
+
+#conteudo .dataTables_paginate a.previous,
+#conteudo .dataTables_paginate a.next {
+  border-radius: 5px;
+  background-color: #f93;
+  color: #FFF!important;
+}
+
+#conteudo .dataTables_paginate a.previous:hover,
+#conteudo .dataTables_paginate a.next:hover {
+  border-radius: 5px;
+  color: #f93!important;
+}
+
+#conteudo .dataTables_paginate .current {
+  border-radius: 5px;
+  color: #37474f!important;
+  border: 1px solid #37474f;
+}
+
+td {
+  max-width: 30ch;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 
 /***
 ****CONFIG
@@ -256,6 +312,7 @@ display: none;
 /**MODAL**/
 #idModalEditarAnimal { display: none; }
 #idModalEditarProfile { display: none; }
+#idModalEditarPatrocinador { display: none; }
 .modal form input[type=text], 
 .modal form input[type=email],
 .modal form select, 
@@ -353,9 +410,7 @@ display: none;
 
 @media only screen and (max-width: 500px) {
   /**HOME**/
-  #conteudo > .article {
-    padding: 0;
-  }
+
   #conteudo > .article > .row {
     display: flex;
     justify-content: center;
